# imagemagick-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER_SETUP.md  Dockerfile  LOGGING_GUIDE.md  README.md  docker-compose.yml  fix-docker-permissions.sh  pyproject.toml
.claude/: settings.local.json
imagemagick_agent/: __init__.py  agent.py  cli.py  config.py  executor.py  gradio_app.py  llm.py  llm_logger.py  log_reader.py  log_viewer_cli.py  logging_config.py  storage.py  web_logs.py
imagemagick_agent/templates/: dashboard.html
tests/: __init__.py  test_agent.py  test_config.py  test_executor.py
